# context-hud

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tr.md  SECURITY.md  SUPPORT.md  extension.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  configuration_help.yml  feature_request.yml
.github/workflows/: release.yml
Casks/: context-hud.rb
docs/: 01-research.md  02-architecture.md  03-implementation-prompt.md  RELEASING.md
docs/releases/: v0.1.0.md  v0.1.9.md  v0.3.10.md  v0.3.11.md
examples/: snapshot.rs
menubar/: context-hud.swift  zed-context-bar.swift
menubar/sources/: AppDelegate.swift  Celebration.swift  CommonViews.swift  DesignTokens.swift  DetailWindow.swift  DisplayPicker.swift  DisplayPrefs.swift  Hud.swift  IncidentPoller.swift  PersonalInfoRedactor.swift  PopoverViewController.swift  PopoverViews.swift  PreferencePane.swift  SettingsPanes.swift  ShareCard.swift  StatsViewController.swift  ThemeCardView.swift  UpdateManager.swift  UsageViewController.swift
menubar/widget/: Widget.swift
packaging/macos/: ContextBar.entitlements  ContextHUD-Info.plist  Install ContextBar.txt  Install ContextHUD.txt
packaging/macos/ContextBarWidget.xcodeproj/: project.pbxproj
scripts/: build-menubar-app.sh  create-macos-dmg.sh  generate-widget-xcodeproj.rb
src/: agent_context.rs  auto_refresh.rs  claude_statusline.rs  context_engine.rs  detail_html.rs  hud.rs  lib.rs  slash_commands.rs  state_writer.rs  usage_signal.py  usage_signal.rs
(+2 files in other folders)
